# ccAnimation

./: .gitignore  CMakeLists.txt  README.md
include/: cc_animation.h  cc_animation_driver.hpp  cc_animation_set.h  cc_animation_set.hpp  cc_easing_curve.h  cc_keyframe.h  cc_keyframe.hpp  cc_value_animation.h  cc_value_animation.hpp  cc_value_evaluator.h
src/: CMakeLists.txt  cc_animation.cc  cc_easing_curve.cc  cc_value_animation.cc  easing.cc
test/: CMakeLists.txt  hello_animation.cc
